# MarketRiskModels

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.openai/: hosting.json
app/: globals.css  layout.tsx  page.tsx  risk-workbench.tsx
app/api/history/: route.ts
app/api/portfolios/: route.ts
app/api/rates/: route.ts
app/api/risk/: route.ts
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_desktop_state.py
backend/src/market_risk/: __init__.py  api.py  config.py  database.py  desktop_api.py  engine.py  market_data.py  models.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_database.py  test_engine.py  test_market_data.py
db/: schema.ts
desktop/: Info.plist  MarketRiskModelsApp.swift  build-macos-app.sh
docs/: architecture.md  development-data-policy.md  macos-app.md
drizzle/: 0001_persisted_models.sql  0002_portfolio_source_name.sql
lib/: api-client.ts  hull-white.ts  risk.ts
public/: sample-portfolio.csv
tests/: broker-import.test.mjs  rendered-html.test.mjs
