[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "market-risk-service"
version = "0.2.0"
description = "Python risk engine and market-data service for Market Risk Models"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "numpy>=2,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=6,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/market_risk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

